[gd_scene load_steps=7 format=3 uid="uid://bschd23pcse03"]

[ext_resource type="Script" uid="uid://cxkxalpshco72" path="res://source/menus/popups/save_game_dialog.gd" id="1_gay4k"]
[ext_resource type="PackedScene" uid="uid://bfxek44m8du8k" path="res://source/menus/menu_widgets/save_slot.tscn" id="2_qbiub"]
[ext_resource type="Texture2D" uid="uid://lh3dna1fipe" path="res://assets/sprites/ui/icons/close.png" id="3_ko2pk"]
[ext_resource type="PackedScene" uid="uid://vaqsswsqvw3l" path="res://source/menus/popups/delete_confirmation.tscn" id="4_ar1cy"]
[ext_resource type="PackedScene" uid="uid://dnqlkatf0syyk" path="res://source/menus/popups/save_confirmation.tscn" id="5_npl6t"]
[ext_resource type="PackedScene" uid="uid://bejs2rqhtcnbh" path="res://source/menus/popups/overwrite_confirmation.tscn" id="6_liabm"]

[node name="SaveGameDialog" type="PanelContainer"]
offset_right = 48.0
offset_bottom = 48.0
script = ExtResource("1_gay4k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Save Game"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="SaveSlot" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_qbiub")]
unique_name_in_owner = true
layout_mode = 2

[node name="SaveSlot2" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_qbiub")]
unique_name_in_owner = true
layout_mode = 2

[node name="SaveSlot3" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_qbiub")]
unique_name_in_owner = true
layout_mode = 2

[node name="Close" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("3_ko2pk")

[node name="DeleteConfirmation" parent="." instance=ExtResource("4_ar1cy")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SaveConfirmation" parent="." instance=ExtResource("5_npl6t")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="OverwriteConfirmation" parent="." instance=ExtResource("6_liabm")]
unique_name_in_owner = true
visible = false
layout_mode = 2
